fixed spacing for gallery

--- a/src/Components/gallery.css
+++ b/src/Components/gallery.css
@@ -1,7 +1,9 @@
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto auto;
+  grid-row-gap: 0px;
   background-color: #ffffff;
+  grid-column-gap: 10px;
 }
 
 .grid-item {
@@ -27,7 +29,7 @@
   {
     position: relative;
     top: -110px;
-    left: 50px;
+    left: -29px;
     z-index: 2;
   }
 
@@ -75,7 +77,7 @@
       {
         position: relative;
         top: -130px;
-        left: 0px;
+        left: -29px;
         z-index: 2;
       }
 
@@ -122,7 +124,7 @@
         {
           position: relative;
           top: -185px;
-          left: 320px;
+          left: 301px;
           z-index: 2;
         }
         .animation1
@@ -168,7 +170,7 @@
             {
               position: relative;
               top: -225px;
-              left: 3px;
+              left: -29px;
               z-index: 2;
             }
 
@@ -215,7 +217,7 @@
                   {
                     position: relative;
                     top: -275px;
-                    left: 55px;
+                    left: 23px;
                     z-index: 2;
                   }
 
